[gd_scene load_steps=2 format=3 uid="uid://cajipcus8tleu"]

[ext_resource type="Script" path="res://Scripts/Classes/PauseMenu.gd" id="1_relf8"]

[node name="PauseMenuCanvas" type="CanvasLayer"]

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_relf8")

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -90.0
offset_right = 160.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -65.5
offset_right = 44.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "= Paused = "

[node name="ResumeButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Button2" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="ExitButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/ResumeButton" to="PauseMenu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/ExitButton" to="PauseMenu" method="_on_exit_button_pressed"]
